<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <ImageView
    android:id="@+id/btn_back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:src="@drawable/ic_back"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
    android:id="@+id/baseline_parent"
    android:layout_width="140dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:layout_marginEnd="24dp"
    android:orientation="horizontal"
    app:layout_constraintStart_toStartOf="@id/position_parent"

    app:layout_constraintBottom_toTopOf="@id/position_parent">

    <TextView
      android:layout_width="75dp"
      android:layout_height="wrap_content"
      android:text="@string/baseline_angle" />

    <TextView
      android:id="@+id/baseline_angle_tv"
      android:text="0.00"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center" />
  </LinearLayout>
  <LinearLayout
    android:id="@+id/position_parent"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent">



    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/a_position" />

      <TextView
        android:id="@+id/position_a_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/b_position" />

      <TextView
        android:id="@+id/position_b_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    </LinearLayout>


    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/c_position" />

      <TextView
        android:id="@+id/position_c_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/d_position" />

      <TextView
        android:id="@+id/position_d_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    </LinearLayout>

  </LinearLayout>


  <cn.ololee.usbserialassistant.view.LocationButtons
    android:id="@+id/locationBtns"
    android:layout_width="200dp"
    android:layout_height="50dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/position_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>